# zopfli-rs

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: speed.rs
src/: lib.rs
tests/: pokemon.txt  round_trip.rs
