[package]
name = "zopfli-rs"
version = "0.1.1"
authors = ["Dylan Frankland <dylan@frankland.io>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["zopfli", "encoding"]
repository = "https://github.com/dfrankland/zopfli-rs"
homepage = "https://github.com/dfrankland/zopfli-rs"
description = """
Bindings to zopfli for deflate, gzip, and zlib compression.
"""
categories = ["compression", "api-bindings"]
build = "build.rs"
exclude = ["test/*"]

[build-dependencies]
bindgen = "0.33.2"
cc = "1.0.7"

[dev-dependencies]
flate2 = "1.0.1"
zopfli = "0.3.7"
rand = "0.4.2"
lazy_static = "1.0.0"
